--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -249,6 +249,28 @@
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/lab_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/noto_sans_kr_bold"
+                    android:includeFontPadding="false"
+                    android:text="911호 좌석 현황"
+                    android:textColor="@color/natural_navy"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/todayTimeTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/noto_sans_kr_regular"
+                    android:includeFontPadding="false"
+                    android:text="2022-09-15 16 : 20"
+                    android:textColor="@color/black"
+                    android:textSize="10dp" />
+
                 <include
                     android:id="@+id/seatGridView"
                     layout="@layout/sub_seat_gridview"
