--- a/app/src/main/res/layout/spinner_custom_item_padding.xml
+++ b/app/src/main/res/layout/spinner_custom_item_padding.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="1"
+    android:textSize="16sp"
+    android:textColor="@color/natural_navy"
+    android:fontFamily="@font/noto_sans_kr_regular"
+    android:includeFontPadding="false"
+    android:padding="16dp"
+    android:gravity="left"/>
