--- a/app/src/main/res/layout/sub_seat_gridview.xml
+++ b/app/src/main/res/layout/sub_seat_gridview.xml
@@ -14,35 +14,27 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
+<!--        <TextView-->
+<!--            android:id="@+id/lab_number"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:fontFamily="@font/noto_sans_kr_bold"-->
+<!--            android:includeFontPadding="false"-->
+<!--            android:text="911호 좌석 현황"-->
+<!--            android:textColor="@color/natural_navy"-->
+<!--            android:textSize="14dp" />-->
 
-        <TextView
-            android:id="@+id/lab_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/noto_sans_kr_bold"
-            android:includeFontPadding="false"
-            android:text="911호 좌석 현황"
-            android:textColor="@color/natural_navy"
-            android:textSize="14dp" />
-
-        <TextView
-            android:id="@+id/todayTimeTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/noto_sans_kr_regular"
-            android:includeFontPadding="false"
-            android:text="2022-09-15 16 : 20"
-            android:textColor="@color/black"
-            android:textSize="10dp" />
-
-        <!--            <View-->
-        <!--                android:layout_width="95dp"-->
-        <!--                android:layout_height="2dp"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:layout_marginTop="10dp"-->
-        <!--                android:background="@drawable/shape_rounded_bar" />-->
+<!--        <TextView-->
+<!--            android:id="@+id/todayTimeTV"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--            android:includeFontPadding="false"-->
+<!--            android:text="2022-09-15 16 : 20"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="10dp" />-->
 
         <TextView
             android:layout_width="wrap_content"
