--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -7,87 +7,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.fragment.ReservFragment">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:paddingTop="30dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/todayTV"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="30dp">
-                <TextView
-                    android:id="@+id/todayTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
-                    android:includeFontPadding="false"
-                    android:text="2022-09-23"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="12dp" />
+                android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
+                android:text="2022-09-23"
+                android:textColor="@color/colorAccent"
+                android:textSize="12dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/noto_sans_kr_bold"
-
-                    android:includeFontPadding="false"
-                    android:text="예약 신청 내역"
-                    android:textColor="@color/natural_navy"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-
-                    android:includeFontPadding="false"
-                    android:text="승인하지 않은 내역들은 1일이 지나면 모두 사라집니다."
-                    android:textColor="@color/black_gray"
-                    android:textSize="12dp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@color/gray" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp">
+                android:fontFamily="@font/noto_sans_kr_bold"
 
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-                <include layout="@layout/sub_request_reserv"/>
-            </LinearLayout>
+                android:includeFontPadding="false"
+                android:text="예약 신청 내역"
+                android:textColor="@color/natural_navy"
+                android:textSize="20dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/noto_sans_kr_regular"
+
+                android:includeFontPadding="false"
+                android:text="승인하지 않은 내역들은 1일이 지나면 모두 사라집니다."
+                android:textColor="@color/black_gray"
+                android:textSize="12dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="15dp"
+                android:background="@color/gray" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/notifyRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/approvalBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:text="확인"
+                android:textSize="16dp"
+                android:textColor="@color/colorAccent"
+                android:fontFamily="@font/poppins_regular"
+                android:backgroundTint="@color/white"
+                style="?android:attr/borderlessButtonStyle"/>
+
+            <Button
+                android:id="@+id/rejectBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:text="거절"
+                android:textSize="16dp"
+                android:textColor="@color/red"
+                android:fontFamily="@font/poppins_regular"
+                android:backgroundTint="@color/white"
+                style="?android:attr/borderlessButtonStyle"/>
 
         </LinearLayout>
-    </ScrollView>
 
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:orientation="vertical"-->
+        <!--                android:paddingLeft="20dp"-->
+        <!--                android:paddingRight="20dp"-->
+        <!--                android:paddingBottom="20dp">-->
+
+        <!--                <include layout="@layout/sub_request_reserv"/>-->
+        <!--                <include layout="@layout/sub_request_reserv"/>-->
+        <!--                <include layout="@layout/sub_request_reserv"/>-->
+        <!--            </LinearLayout>-->
+
+
+    </LinearLayout>
 </layout>
 
