--- a/app/src/main/res/layout/sub_request_reserv.xml
+++ b/app/src/main/res/layout/sub_request_reserv.xml
@@ -6,7 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:id="@+id/parentLayout"
+    android:paddingTop="10dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -34,7 +37,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@+id/checkbox"
+            android:layout_toEndOf="@+id/checkbox"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_profile_pic" />
 
@@ -62,7 +65,7 @@
             android:includeFontPadding="false"
             android:text="컴퓨터소프트웨어공학과"
             android:textColor="@color/semi_black"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/reservTimeTextView"
